force-app/main/default/objects/Membership_Refund__c/Membership_Refund__c.object-meta.xml
<CustomObject>
    <description>This object is to store details of refund transactions related to the memberships</description>
    <label>Membership Refund</label>
    <nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Membership Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>