force-app/main/default/objects/Membership_Refund__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Captures the refund amount with up to 16 digits and 2 decimal places.</description>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>