force-app/main/default/objects/Membership_Refund__c/fields/LastGatewayErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LastGatewayErrorMessage__c</fullName>
    <description>Stores the error message from the payment gateway&apos;s last processing attempt.</description>
    <label>Last Gateway Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>