force-app/main/default/objects/Membership_Refund__c/fields/LastGatewayProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>LastGatewayProcessedDate__c</fullName>
    <description>Captures the date and time of the last gateway processing attempt.</description>
    <label>Last Gateway Processed Date</label>
    <type>DateTime</type>
</CustomField>