force-app/main/default/objects/Membership_Refund__c/fields/LastGatewayResponseCode__c.field-meta.xml
<CustomField>
    <fullName>LastGatewayResponseCode__c</fullName>
    <description>Stores the response code from the last payment gateway processing attempt.</description>
    <label>Last Gateway Response Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>