force-app/main/default/objects/Membership_Refund__c/fields/Membership_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Membership_Transaction__c</fullName>
    <description>Links the refund to the membership transaction, ensuring dependency.</description>
    <label>Membership Transaction</label>
    <referenceTo>Membership_Transaction__c</referenceTo>
    <relationshipLabel>Membership Refunds</relationshipLabel>
    <relationshipName>Membership_Refunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>