force-app/main/default/objects/Membership_Refund__c/fields/ProcessorTransactionFee__c.field-meta.xml
<CustomField>
    <fullName>ProcessorTransactionFee__c</fullName>
    <description>Records the processor&apos;s transaction handling fee with up to 16 digits and 2 decimal places.</description>
    <label>Processor Transaction Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>