force-app/main/default/objects/Membership_Refund__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Allows selection of the refund reason from predefined options.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Amount</fullName>
            </value>
            <value>
                <fullName>Member Request</fullName>
            </value>
            <value>
                <fullName>Downgrading Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>