force-app/main/default/objects/Membership_Refund__c/fields/RefundCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>RefundCompletionDate__c</fullName>
    <description>Records the date and time when the refund was completed.</description>
    <label>Refund Completion Date</label>
    <type>Date</type>
</CustomField>