force-app/main/default/objects/Membership_Refund__c/fields/RefundInitiationDate__c.field-meta.xml
<CustomField>
    <fullName>RefundInitiationDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Records the date and time when the refund was created.</description>
    <label>Refund Initiation Date</label>
    <type>Date</type>
</CustomField>