force-app/main/default/objects/Membership_Refund__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the current status of the refund (e.g., &apos;Pending&apos;, &apos;Processed&apos;).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>