force-app/main/default/objects/Membership_Refund__c/fields/Tender_Type_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Tender_Type_Credit_Card__c</fullName>
    <formula>ISPICKVAL(Membership_Transaction__r.PaymentMethod__c, &quot;Credit Card&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tender Type Credit Card?</label>
    <type>Checkbox</type>
</CustomField>